--- a/review/styleImagens.css
+++ b/review/styleImagens.css
@@ -6,22 +6,59 @@
     font-family: "Open Sans", sans-serif;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
 h1 {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
 }
 
+.imagens {
+    display: grid;
+    grid-template-columns: 200px 1fr 200px;
+
+}
+
 #wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 16px;
+    max-height: 80vh;
+    overflow-y: auto;
+}
+
+#wrapper::-webkit-scrollbar {
+    width: 5px;
+}
+
+#wrapper::-webkit-scrollbar-thumb {
+    background-color: #747474;
+    border-radius: 10px;
+}
+
+#wrapper::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+
+
+#imagem_completa {
+    position: relative;
+    height: max-content;
+    padding: 20px;
+    display: flex;
+    margin: auto;
+    align-items: center;
+    box-sizing: border-box;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.image_wrapper img {
+    max-width: 100%;
+    max-height: 85vh;
+    display: block;
+    width: auto;
+    height: auto;
+    object-fit: contain;
 }
 
 .card {
