--- a/review/styleImagens.css
+++ b/review/styleImagens.css
@@ -12,10 +12,47 @@ h1 {
     margin-bottom: 20px;
 }
 
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.buttons button {
+    background-color: #202020;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
+    color: white;
+}
+
+.buttons button i {
+    font-size: 18px;
+}
+
+
 .imagens {
     display: grid;
     grid-template-columns: 200px 1fr 200px;
+    transition: grid-template-columns 0.3s ease;
+    gap: 10px;
+}
 
+/* Só imagem */
+.imagens.somente-imagem {
+    grid-template-columns: 0 1fr 0;
+}
+
+/* Imagem + comentários */
+.imagens.com-comentarios {
+    grid-template-columns: 0 1fr 200px;
+}
+
+/* Imagem + wrapper */
+.imagens.com-wrapper {
+    grid-template-columns: 200px 1fr 0;
 }
 
 #wrapper {
@@ -24,6 +61,7 @@ h1 {
     gap: 16px;
     max-height: 80vh;
     overflow-y: auto;
+    width: max-content;
 }
 
 #wrapper::-webkit-scrollbar {
@@ -50,6 +88,7 @@ h1 {
     box-sizing: border-box;
     height: 100vh;
     overflow: hidden;
+    grid-column: 2;
 }
 
 .image_wrapper img {
@@ -65,7 +104,6 @@ h1 {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 8px;
     display: flex;
     flex-direction: column;
 }
@@ -78,9 +116,6 @@ h1 {
 }
 
 .card p {
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 500;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -92,4 +127,586 @@ h1 {
 
 .no-image-message {
     color: #6b7280;
+}
+
+.context-menu {
+    display: none;
+    position: absolute;
+    z-index: 1000;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 5px 0;
+}
+
+.context-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.context-menu ul li {
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.context-menu ul li:hover {
+    background-color: #f0f0f0;
+}
+
+#menuContexto {
+    display: none;
+    position: absolute;
+    background: black;
+    border: 1px solid black;
+    padding: 4px;
+    list-style: none;
+    top: 183px;
+    left: 1485px;
+    font-size: 14px;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+#menuContexto li span {
+    display: inline-block;
+    transition: transform 0.3s ease;
+}
+
+#menuContexto li:hover span {
+    animation: balanco 0.5s ease infinite;
+}
+
+@keyframes balanco {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(10deg);
+    }
+
+    50% {
+        transform: rotate(-10deg);
+    }
+
+    75% {
+        transform: rotate(5deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+
+img {
+    -webkit-user-drag: none;
+    user-select: none;
+}
+
+.nav-select {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+
+#indiceSelect {
+    border: none;
+    background: #676565;
+    color: white;
+    width: 100px;
+    border-radius: 15px;
+    padding: 5px 10px;
+    text-align: center;
+    font-weight: bold;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
+}
+
+h2#dataEnvio {
+    text-align: center;
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 0;
+}
+
+.obra-card {
+    background: #f2f2f2;
+    padding: 12px;
+    margin: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: 0.3s all ease;
+    position: relative;
+    height: max-content;
+}
+
+.obra-card:hover {
+    background: #e0e0e0;
+}
+
+.mencao-badge {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 50%;
+    padding: 5px;
+    min-width: 15px;
+    text-align: center;
+    box-shadow: 0 0 0 2px white;
+    z-index: 10;
+}
+
+.obra-img-preview {
+    display: flex;
+    justify-content: center;
+}
+
+.obra-img-preview img {
+    width: 90%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 15px;
+}
+
+.obra-info {
+    text-align: center;
+}
+
+.obra-info h3 {
+    margin: 0;
+    font-size: 18px;
+}
+
+.obra-info p {
+    margin: 5px 0 0;
+    color: #666;
+}
+
+.container-main.expanded {
+    display: grid;
+    grid-template-columns: 2.5fr 1fr;
+    transition: 0.5s all ease;
+    grid-template-rows: 50px 1fr;
+}
+
+.container-main {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.containerObra {
+    width: 90%;
+    max-width: 1200px;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    /* margin-top: 40px; */
+    padding: 0 50px;
+    max-height: 95%;
+    overflow-y: auto;
+    grid-column: 1;
+}
+
+.tarefasObra {
+    max-height: 95%;
+    overflow-y: auto;
+    border-left: 1px solid;
+    padding: 40px 0;
+    grid-column: 2;
+    grid-row: 1 / -1;
+}
+
+.tarefasImagensObra {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+p#data_aprovacao {
+    font-weight: bold;
+}
+
+p#status_funcao {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    z-index: 10;
+    font-size: 10px;
+    text-align: center;
+    color: transparent;
+}
+
+p.imagem_nome {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.filtros label {
+    font-weight: bold;
+    font-size: 14px;
+}
+
+
+/* seletor bonitinho */
+.zoom-select {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    padding: 4px 8px;
+    font-size: .9rem;
+    border-radius: 6px;
+}
+
+.image_wrapper {
+    position: relative;
+    display: inline-block;
+    transform-origin: 0 0;
+    transition: transform 0.2s ease-in-out;
+    cursor: grab;
+}
+
+#image_wrapper.grabbing {
+    cursor: grabbing;
+}
+
+.image_wrapper img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 12px;
+    width: 400px;
+    max-width: 90%;
+}
+
+.resposta-editor {
+    border: 1px solid #ccc;
+    padding: 10px;
+    min-height: 80px;
+    margin-bottom: 15px;
+}
+
+
+.comment-img-thumb {
+    width: 100px;
+    height: auto;
+    cursor: pointer;
+    margin-top: 10px;
+    border-radius: 6px;
+    transition: transform 0.2s ease-in-out;
+}
+
+.comment-img-thumb:hover {
+    transform: scale(1.05);
+}
+
+.modal-imagem {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-imagem img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+}
+
+.resposta {
+    margin-top: 10px;
+    margin-left: 10px;
+    color: #f1f1f1;
+}
+
+.resposta-nome {
+    font-size: 0.8rem;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    margin-bottom: 4px;
+}
+
+.corpo-resposta {
+    margin-left: 18px;
+}
+
+.resposta-texto {
+    font-size: 0.8rem;
+    color: #ffffff;
+    margin-bottom: 4px;
+}
+
+.resposta-data {
+    font-size: 0.7rem;
+    color: #888;
+}
+
+.reply-icon {
+    color: #00df30;
+    transform: scaleX(-1);
+}
+
+.modal-actions {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.modal-actions button {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s all ease;
+    font-size: 12px;
+    color: white;
+}
+
+.modal-actions button:hover {
+    opacity: 0.8;
+}
+
+
+#add-imagem {
+    width: 40px;
+    height: 40px;
+    border: none;
+    border-radius: 50%;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s ease-in-out;
+    text-align: center;
+}
+
+#add-imagem:hover {
+    background-color: #45a049;
+    transform: scale(1.1);
+}
+
+.preview-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 15px;
+    justify-content: center;
+}
+
+.preview-container img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+}
+
+#btn-enviar-imagens {
+    margin: 0 auto;
+    display: flex;
+    background: green;
+    padding: 5px 8px;
+    border-radius: 15px;
+    font-size: 14px;
+    color: white;
+}
+
+
+.comment {
+    position: absolute;
+    cursor: pointer;
+    padding: 5px;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    font-size: 12px;
+    transition: all 0.3s ease-in-out;
+    transform: translate(-50%, -50%);
+}
+
+
+.comment-number.highlight,
+.comment.highlight {
+    background-color: #007bff;
+    color: white;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.action-btn {
+    padding: 5px 2rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s all ease;
+    color: white;
+}
+
+
+.comentarios {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
+
+.comentarios::-webkit-scrollbar,
+.tarefasObra::-webkit-scrollbar,
+.containerObra::-webkit-scrollbar {
+    width: 5px;
+}
+
+.comentarios::-webkit-scrollbar-thumb,
+.tarefasObra::-webkit-scrollbar-thumb,
+.containerObra::-webkit-scrollbar-thumb {
+    background-color: #747474;
+    border-radius: 10px;
+}
+
+.comentarios::-webkit-scrollbar-track,
+.tarefasObra::-webkit-scrollbar-track,
+.containerObra::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+
+.comment-card {
+    background-color: #333;
+    border-radius: 8px;
+    padding: 15px;
+    color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    position: relative;
+}
+
+.comment-header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 8px;
+}
+
+.comment-number {
+    background-color: #666;
+    color: white;
+    padding: 4px 8px;
+    border-radius: 50%;
+    font-weight: bold;
+}
+
+.comment-user {
+    font-weight: bold;
+}
+
+.comment-body {
+    margin-bottom: 8px;
+}
+
+.comment-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.comment-date {
+    font-size: 12px;
+    color: #888;
+}
+
+.comment-actions button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: white;
+    margin-left: 5px;
+}
+
+.comment-actions button:hover {
+    transform: scale(1.1);
+}
+
+.comment-resp {
+    color: #ffffff;
+}
+
+
+.card {
+    position: relative;
+    width: 200px;
+    /* ajuste conforme necessário */
+    display: inline-block;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    /* fundo escuro com transparência */
+    color: white;
+    padding: 4px 8px;
+    box-sizing: border-box;
+    font-size: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
