--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -1267,3 +1267,163 @@ input[type="checkbox"] {
 #modal_pos {
     display: flex;
 }
+
+
+#drop-area {
+    border: 2px dashed #ccc;
+    border-radius: 10px;
+    padding: 30px;
+    text-align: center;
+    color: #999;
+    margin-bottom: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#drop-area.highlight {
+    background-color: #eef6ff;
+    border-color: #007bff;
+    color: #007bff;
+}
+
+ul.file-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.file-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    margin-bottom: 6px;
+    background-color: #f9f9f9;
+}
+
+.file-info {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.file-size {
+    color: #888;
+    font-size: 0.9em;
+}
+
+.remove-btn {
+    color: #c00;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 1.2em;
+}
+
+.buttons-upload {
+    display: flex;
+    justify-content: space-around;
+}
+
+.buttons-upload button {
+    padding: 4px 8px;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-size: 14px;
+}
+
+.buttons-upload button:hover {
+    cursor: pointer;
+}
+
+#modalUpload h2 {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+#btn-ir-revisao {
+    padding: 3px 5px;
+    background-color: #2e468b;
+    border-radius: 10px;
+    font-size: 12px;
+    color: white;
+}
+
+
+.popover {
+    position: fixed;
+    background: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 6px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    width: 300px;
+    font-size: 14px;
+}
+
+.popover::before {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 20px;
+    border-width: 10px;
+    border-style: solid;
+    border-color: white transparent transparent transparent;
+}
+
+.secao {
+    margin-bottom: 15px;
+}
+
+.secao-titulo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f5f5f5;
+    padding: 6px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    color: black;
+
+}
+
+.secao-conteudo {
+    padding: 6px 10px;
+    margin-top: 5px;
+    color: black;
+}
+
+.secao-conteudo hr {
+    margin: 10px 0;
+}
+
+.badge,
+.badge-interna {
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    padding: 2px 6px;
+    border-radius: 50%;
+    margin-left: 6px;
+}
+
+.oculto {
+    display: none;
+}
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.2s ease-out;
+}
+
+.revisao_imagem button {
+    background-color: yellow;
+    font-size: 14px;
+    padding: 5px;
+    border-radius: 15px;
+    box-shadow: 0 4px 6px #a3a3a3;
+    cursor: pointer;
+}
