feat: permitido ver o pdf de cada imagem

--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -1912,7 +1912,7 @@ button#deleteButton {
 }
 
 
-#drop-area {
+#drop-area, .drop-area {
     border: 2px dashed #ccc;
     border-radius: 10px;
     padding: 30px;
@@ -1923,7 +1923,7 @@ button#deleteButton {
     transition: 0.3s;
 }
 
-#drop-area.highlight {
+#drop-area.highlight, .drop-area.highlight {
     background-color: #eef6ff;
     border-color: #007bff;
     color: #007bff;
@@ -1993,4 +1993,8 @@ ul.file-list {
     border-radius: 15px;
     box-shadow: 0 4px 6px #a3a3a3;
     cursor: pointer;
+}
+
+#pdf-controls {
+    text-align: center;
 }
