feat: add 'Etapa' column to obra table and adjust CSS for header styling

--- a/Dashboard/styleObra.css
+++ b/Dashboard/styleObra.css
@@ -688,7 +688,7 @@ table#tabela-obra tbody tr:hover {
     background-color: #FF5833;
 }
 
-table#tabela-obra th:first-child {
+table#tabela-obra th:nth-child(2) {
     max-width: max-content;
     overflow: hidden;
     text-overflow: ellipsis;
